--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@
 
 body {
     font-family: var(--primary-font-family);
+    font-size: 14px;
+    letter-spacing: 0.03em;
+
     color: var(--primary-text-color-theme-dark);
 }
 
@@ -189,7 +192,13 @@ a {
 
 /*=====START PORTFOLIO=====*/
 
-.our-portfolio {
+.title-portfolio {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.4;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    
     color: var(--primary-text-color-theme-dark);
 }
 
